Fix extra scrollbars on firefox

--- a/frontend-rd/src/App.css
+++ b/frontend-rd/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  margin-left: -11px;
+  margin-bottom: -11px;
   height: 100vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
